# adaptirank

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/data/: esci_fixture.yaml  esci_large_us.yaml  esci_official_sample.yaml  esci_small_us.yaml
configs/ranking/: cross_encoder_m3.yaml  cross_encoder_smoke.yaml  cross_encoder_union_m3.yaml  m3_ce_evaluate.yaml  m3_ce_union.yaml  m3_features.yaml  m3_handoff_analysis.yaml  m3_learned.yaml
configs/retrieval/: fixture.yaml  full.yaml  m3_three_split.yaml  official_sample.yaml
docs/: ARCHITECTURE.md  DATA.md  DECISIONS.md  EXPERIMENTS.md  LIMITATIONS.md  M3_CONTINUATION.md  RESULTS.md  SIMULATOR.md  TASKS.md  m3_findings.md
notebooks/: adaptirank_m3_colab.ipynb  m3_cross_encoder_a100_runall.ipynb  readme.md
scripts/: analyze_m3_ce_findings.py  analyze_m3_handoff.py  analyze_m3_ranking.py  build_catalog.py  build_ce_union.py  build_ranking_features.py  download_data.py  evaluate_ce_cascades.py  import_m3_ce_outputs.py  m3_findings_doc.py  package_m3_ce_handoff.py  run_experiment.py  run_retrieval.py  score_cross_encoder.py  smoke_foundation.py  train_rankers.py  validate_m3_ce_notebook.py
src/adaptirank/: __init__.py
tests/integration/: test_bm25_retrieval.py  test_dense_retrieval.py  test_esci_pipeline.py
tests/unit/: test_ce_union.py  test_ce_workflow.py  test_config.py  test_cross_encoder.py  test_deterministic_ranking.py  test_esci_config.py  test_esci_validation.py  test_hybrid.py  test_judgments.py  test_m3_ce_analysis.py  test_m3_handoff.py  (+8 more)
(+47 files in other folders)
