[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptirank"
version = "0.1.0"
description = "Research infrastructure for modular ads ranking, online learning, OPE, and budget optimization"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "faiss-cpu>=1.10,<2",
  "lightgbm>=4.5,<5",
  "numpy>=2.1,<3",
  "polars>=1.12,<2",
  "pyarrow>=18,<24",
  "pydantic>=2.9,<3",
  "PyYAML>=6.0,<7",
  "requests>=2.32,<3",
  "scikit-learn>=1.6,<2",
  "sentence-transformers>=5,<6",
  "tantivy>=0.25,<0.27",
]

[dependency-groups]
dev = [
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.7,<1",
  "types-PyYAML>=6.0,<7",
  "types-requests>=2.32,<3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["adaptirank"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
  "external: requires network access and official external data",
]
